change performance tests VM Opts
Signed-off-by: NeatGuyCoding <15627489+NeatGuyCoding@users.noreply.github.com>